// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shouled correctly render ExperimentSummary one expense 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        1
      </span>
       expense
       totalling 
      <span>
        $123.00
      </span>
    </h1>
    <div
      className="page-header__action"
    >
      <Link
        className="button"
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;

exports[`shouled correctly render ExperimentSummary with multiple expense 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        23
      </span>
       expenses
       totalling 
      <span>
        $123,343.00
      </span>
    </h1>
    <div
      className="page-header__action"
    >
      <Link
        className="button"
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;
